# sherlock_dict_rs

./: .gitignore  Cargo.toml  README.md
src/: main.rs
